# PIA_Projet_final_M102

./: .gitignore  AirBNB.ipynb  COMMAND.md  EDA.ipynb  EDA_COPY.ipynb  Projet_Final_M102_Enonce_V2.md  README.md  app.py  decompress.py  features.py  geocode_service.py  model.joblib  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.tsx  Predictor.tsx  index.css
model/AirBnbPriceDetecParisBoost_v1_20260522_133439/: metrics.json
model/AirBnbPriceDetecParisBoost_v1_20260522_134828/: metrics.json
