[project]
name = "m102-projet-airbnb"
version = "0.1.0"
description = "M102"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.11",
    "joblib>=1.3",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "requests>=2.34.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
]

[tool.uv]
package = false
